--- a/CarMedia/CarMedia/MainWindow.xaml
+++ b/CarMedia/CarMedia/MainWindow.xaml
@@ -54,7 +54,7 @@
                     <!--<Label Content="Fan" Margin="5,0,0,0" Foreground="White" FontSize="36"/>-->
                     
                 </StackPanel>
-                <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Horizontal" Margin="40,0,0,0">
                     <StackPanel Margin="0,15,0,0">
                         <Button x:Name="btnIncreaseTemp1" BorderThickness="0" VerticalContentAlignment="Center" Margin="10,0,10,20" Background="Transparent" Click="btnIncreaseFanSpeed_Click">
                             <Image Source="Images\fanBlade.png" Height="55" Width="55"/>
@@ -75,7 +75,7 @@
                 </StackPanel>
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Width="220" Margin="20,0,0,20">
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Width="220" Margin="50,0,0,20">
                 <StackPanel>
                     <Button x:Name="btnBlowerWindscreen" Height="70" Width="90" Margin="10,10" Background="Black" Opacity="0.8" Click="btnBlowerWindscreen_Click">
                         <Image Source="Images\blowerWindscreen.png"></Image>
