--- a/CarMedia/CarMedia/MainWindow.xaml
+++ b/CarMedia/CarMedia/MainWindow.xaml
@@ -24,7 +24,7 @@
 
         
         
-        <StackPanel Grid.Row="1" Background="Transparent" Orientation="Horizontal">
+        <StackPanel Name="temperatureControls" Grid.Row="1" Background="Transparent" Orientation="Horizontal">
             <StackPanel VerticalAlignment="Bottom" Margin="0,10">
                 
                 <!--<Label Content="Temperature" Margin="5,0,0,0" Foreground="White" FontSize="36"/>-->
@@ -101,7 +101,7 @@
                     <Label Content="O" FontSize="42" FontWeight="Bold" Margin="0,-10" Foreground="CornflowerBlue"></Label>
                     <Label Content="L" FontSize="42" FontWeight="Bold" Margin="5,-10,0,0" Foreground="CornflowerBlue"></Label>
                 </StackPanel>-->
-            <StackPanel Orientation="Horizontal">                
+            <StackPanel Name="volumeControl" Orientation="Horizontal">                
                 <Button x:Name="btnDecreaseVolume" VerticalContentAlignment="Center" BorderThickness="0" Margin="10,0,10,10" Background="Transparent" Click="btnDecreaseVolume_Click">
                     <Image Source="Images\volumeDown.png" Height="70" Width="70"/>
                 </Button>
